@@ -1,3 +1,9 @@
+2004-04-30  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/e-cal-model.c (e_cal_view_objects_modified_cb): deal separately
+	with master objects and recurring instances, so that notifications
+	are sent correctly.
+
 2004-04-30  Not Zed  <NotZed@Ximian.com>
 
 	* gui/dialogs/meeting-page.c (get_widgets): make the entry
